Fix message dismissal hover indication text in dark mode.

--- a/nkdsu/static/less/main.less
+++ b/nkdsu/static/less/main.less
@@ -490,6 +490,7 @@ body[data-dark-mode=system] [value=system] {
   cursor: pointer;
   .noise();
   background-color: @inv_bg;
+  color: @fg;
   overflow: hidden;
   text-shadow: none;
   position: relative;
